Changed GUI and pom for JAR packaging

--- a/pom.xml
+++ b/pom.xml
@@ -44,5 +44,46 @@
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
     </properties>
-    
+
+    <build>
+        <resources>
+            <resource>
+                <directory>src/main/java/Chess/res</directory>
+                <filtering>true</filtering>
+            </resource>
+        </resources>
+        <plugins>
+            <plugin>
+                <artifactId>maven-assembly-plugin</artifactId>
+                <configuration>
+                    <archive>
+                        <manifest>
+                            <!-- Full name of class containing main function to run -->
+                            <mainClass>Chess.Main</mainClass>
+                        </manifest>
+                    </archive>
+                    <descriptorRefs>
+                        <descriptorRef>jar-with-dependencies</descriptorRef>
+                    </descriptorRefs>
+
+                    <!-- Optional: Stops 'jar-with-dependencies' to be appended the .jar's name -->
+                    <appendAssemblyId>false</appendAssemblyId>
+
+                    <!-- Optional: Sets a custom name for the jar file -->
+                    <finalName>SkakBotProg</finalName>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>make-assembly</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>single</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
+
 </project>
+
